@@ -1,4 +1,4 @@
-import { Component, Input } from "@angular/core";
+import { Component, Input, OnInit } from "@angular/core";
 
 @Component({
     selector: "wk-calendarCard",
@@ -6,7 +6,7 @@ import { Component, Input } from "@angular/core";
     styleUrls: ["calendarCard.component.css"]
 })
 
-export class CalendarCardComponent {
+export class CalendarCardComponent implements OnInit {
     @Input() title: string;
     @Input() date: string;
     @Input() description: string;
@@ -15,5 +15,8 @@ export class CalendarCardComponent {
         this.title = "Missing Title";
         this.date = "Missing Date";
         this.description = "Missing Description";
+    }
+    ngOnInit(): void {
+        
     }
 }
